Update & Remove Edges when Markers are Moved / Removed

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -35,3 +35,17 @@ h1 {
     height: 250px;
     max-height: 250px;
 }
+
+.map_item {
+    background: white;
+    display: inline;
+}
+
+.map_item img {
+    max-height: 150px;
+}
+
+.map_list_scroll_wrapper {
+    overflow-x: scroll;
+    white-space: nowrap;
+}
