--- a/web/css/style.css
+++ b/web/css/style.css
@@ -14,13 +14,15 @@ body {
     background-repeat: repeat;
 }
 
-h1 {
+/*h1 {
     color: #333;
-}
+}*/
 
 .canvas-container {
     background: #cccccc;
     padding: 2px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #my_canvas {
@@ -29,6 +31,14 @@ h1 {
 
 .new_marker_container {
     border-right: 2px solid #607d8b;
+}
+
+.new_marker_droppable {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    text-align: center;
 }
 
 #map_selection_level_selection img {
@@ -45,7 +55,39 @@ h1 {
     max-height: 150px;
 }
 
+#marker_fill_rest > .row {
+    display: table;
+    height: 100%;
+}
+
 .map_list_scroll_wrapper {
     overflow-x: scroll;
     white-space: nowrap;
+}
+
+#controls-section {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    min-width: 300px;
+}
+
+#controls-section > .row {
+    margin: 15px;
+    margin-bottom: -15px;
+}
+
+#controls-section > .row > .columns {
+    background-color: white;
+    margin-bottom: 15px;
+}
+
+.marker_controls_button_container {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.marker-edit-button, .marker-delete-button {
+    margin-bottom: 0;
+    width: 90%;
 }
