--- a/web/css/style.css
+++ b/web/css/style.css
@@ -91,3 +91,52 @@ body {
     margin-bottom: 0;
     width: 90%;
 }
+
+#map_controls_compass, #map_controls_position_reset, #map_controls_zoom {
+    background-color: #607D8B;
+    border-radius: 3px;
+    padding: 3px;
+    display: inline-block;
+    position: absolute;
+}
+
+#map_controls_compass {
+    bottom: 65px;
+    height: 20px;
+    right: 3px;
+    text-align: center;
+    width: 20px;
+}
+
+#map_controls_compass span, #map_controls_position_reset span {
+    line-height: 0;
+    display: block;
+    color: #ffffff;
+}
+
+#map_controls_compass span {
+    font-size: 17px;
+    margin-top: -1.5px;
+}
+
+.fi-compass:before {
+    transform: rotate(-45deg);
+}
+
+#map_controls_position_reset {
+    height: 20px;
+    width: 20px;
+    right: 3px;
+    bottom: 40px;
+}
+
+#map_controls_position_reset span {
+    font-size: 14px;
+}
+
+#map_controls_zoom {
+    height: 30px;
+    width: 20px;
+    right: 3px;
+    bottom: 3px;
+}
