--- a/web/css/style.css
+++ b/web/css/style.css
@@ -12,6 +12,20 @@ material colors:
 body {
     background: url('../res/background.png');
     background-repeat: repeat;
+
+    min-height: 500px;
+    min-width: 300px;
+    text-align: center;
+}
+
+body > * {
+    text-align: initial;
+}
+
+.main-container {
+    background-color: rgba(255, 255, 255, 0.4);
+    display: inline-block;
+    margin: 0 auto;
 }
 
 /*h1 {
@@ -193,4 +207,55 @@ body {
 #map_controls_zoom_out span i {
     margin-top: 3px;
     margin-bottom: -3px;
+}
+
+/* for scaling things */
+
+@media (min-width: 0em) and (max-width: 39.9375em),
+    (min-height: 0em) and (max-height: 33.9375em) {
+
+    /* title-area */
+    #game_name h1 {
+        font-size: 16px;
+        margin-bottom: 0;
+    }
+
+    #title_bar_area .button {
+        margin-bottom: 0;
+        padding: 0.425em 0.5em;
+    }
+
+    #session_id_container, #title_bar_area .button {
+        font-size: 12px;
+    }
+
+    #content_area .columns {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+@media (min-width: 40em) and (max-width: 63.9375em),
+    (min-height: 34em) {
+
+    /* title-area */
+    #game_name h1 {
+        font-size: 24px;
+        margin-bottom: 0;
+    }
+
+    #title_bar_area .button {
+        margin-bottom: 0;
+        padding: 0.625em 0.75em;
+    }
+
+    #session_id_container, #title_bar_area .button {
+        font-size: 12px;
+    }
+}
+
+@media (min-width: 64em) {
+    #game_name h1 {
+        font-size: 30px;
+    }
 }
