--- a/web/css/style.css
+++ b/web/css/style.css
@@ -53,6 +53,7 @@ body > * {
     margin-right: auto;
     padding: 15px;
     text-align: center;
+    margin-top: 10px;
 }
 
 #map_selection_level_selection img {
@@ -62,7 +63,6 @@ body > * {
 
 .map_item {
     background: white;
-    display: inline;
 }
 
 .map_item img {
@@ -224,7 +224,20 @@ body > * {
 }
 
 .map_item {
-    height: 100%;
+    border: 2px solid #666;
+    display: inline-block !important;
+    height: 90%;
+    margin-right: 5px;
+}
+
+.ui-sortable-placeholder {
+    visibility: hidden !important;
+    width: 0;
+    height: 0;
+}
+
+.map_item.selected_map {
+    border-color: #2196F3;
 }
 
 @media (min-width: 0em) and (max-width: 39.9375em),
@@ -256,6 +269,7 @@ body > * {
 
     .new_marker_droppable {
         padding: 3px;
+        margin-top: 0;
     }
 
     .row .row {
@@ -266,6 +280,7 @@ body > * {
     .row.title-bar {
         margin-left: -0.9375rem;
         margin-right: -0.9375rem;
+        padding: 0;
     }
 
     #controls-section > .row {
@@ -274,7 +289,7 @@ body > * {
     }
 
     .map_item img {
-        max-height: 100%;
+        max-height: 90%;
     }
 
     .marker_controls_button_container .button {
@@ -285,6 +300,47 @@ body > * {
         font-size: 12px;
         margin-bottom: 5px;
         padding: 3px;
+    }
+
+    .start_goal p {
+        font-size: 8pt;
+        line-height: 0.9;
+    }
+
+    #map_controls_compass {
+        bottom: 90px;
+        height: 30px;
+        width: 30px;
+    }
+
+    #map_controls_compass span i {
+        font-size: 27px;
+    }
+
+    #map_controls_position_reset {
+        bottom: 55px;
+        height: 30px;
+        width: 30px;
+    }
+
+    #map_controls_position_reset span i {
+        font-size: 23px;
+        padding-top: 2px;
+        padding-left: 1px;
+    }
+
+    #map_controls_zoom {
+        height: 45px;
+        width: 30px;
+    }
+
+    #map_controls_zoom i {
+        font-size: 18px;
+        padding-left: 4px;
+    }
+
+    #map_controls_zoom_in, #map_controls_zoom_out {
+        height: 22.5px;
     }
 }
 
@@ -328,7 +384,7 @@ body > * {
     }
 
     #map_list_area .button {
-        font-size: 12px;
+        font-size: 15px;
         margin-bottom: 5px;
         padding: 3px;
     }
